src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Foundation Lists</fullName>
        <description>Lead lists for the AACR Foundation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
        <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>LeadToDnB</label>
        <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
        <relationshipLabel>LeadToDnB</relationshipLabel>
        <relationshipName>LeadToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBContactRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>LeadContactToDnB</label>
        <referenceTo>DNBoptimizer__DnBContactRecord__c</referenceTo>
        <relationshipLabel>LeadToDnB_Contact</relationshipLabel>
        <relationshipName>LeadToDnB_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Unique_ID__c</fullName>
        <description>This field captures the Vendor/list unique ID for data synchronization purposes</description>
        <externalId>true</externalId>
        <label>List Unique ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this lead was created from.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCity__c</fullName>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCountry__c</fullName>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyPostalCode__c</fullName>
        <label>Company Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyState__c</fullName>
        <label>Company State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyStreet__c</fullName>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this field to mark the Lead as OptOut.</description>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <businessProcess>Foundation Lists</businessProcess>
        <description>For Foundation Lead lists</description>
        <label>Foundation</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Email_address_required</fullName>
        <active>true</active>
        <description>Leads must have an email address provided.</description>
        <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email must be provided for Leads.</errorMessage>
    </validationRules>
</CustomObject>